# outline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yaml  pyproject.toml  run_bot.sh  run_server.sh  server.py  setup.cfg
.cursor/rules/: merge-request.mdc  project-description.mdc
.github/pull_requests/: 99-body.md
.github/workflows/: ci.yml  deploy-back.yml  deploy-bot.yml  deploy-front.yml  deploy-reusable.yml  stands.example.json
app_bot/: bot.py  config.py  const.py  dtos.py  enums.py  exceptions.py  routes.py  s3.py
app_bot/handlers/: __init__.py  callback.py  commands.py  messages.py
app_bot/interaction/: buttons.py  menus.py  messages.py
app_bot/utils/: callback_registry.py  context_history.py  decorators.py  dialogs.py
app_server/: app.py  config.py  dtos.py  enums.py  error_handlers.py  exceptions.py  responses.py  routes.py  utils.py
app_server/assets/: .editorconfig  .env.example  .gitignore  .prettierrc.json  INSTALLATION_README.md  babel.config.js  eslint.config.ts  index.html  installation.html  package-lock.json  package.json  site-config.json.example  tsconfig.app.json  tsconfig.node.json  vite.config.installation.ts  vite.config.ts
app_server/routes/: __init__.py  keys.py  orders.py  (+5 more)
contrib/: enums.py
keys/: storage.py
nginx/: api-server
requirements/: base.txt  local.txt
root/: config.py  dtos.py  exceptions.py  media_storage.py
scripts/: deploy-remote.sh  gh-deploy-stands.sh
services/: __init__.py  base.py  http_service.py  payment.py  wata.py  yookassa.py
settings/: base.py  local.py
(+161 files in other folders)
