[project]
requires-python = ">=3.10"

[tool.ruff]
# Always generate Python 3.11-compatible code.
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["root", "app_server"]
